# Deduplication-using-Bloom-Lilter-and-Locality-Sensitive-Hashing

./: .gitignore  README.html  README.md  baseline.py  bloom_filter.py  bloom_filter_example.ipynb  discussion.html  discussion.md  gitignore  pyproject.toml  requirements.txt  setup.py  test1.txt  text2.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: bloom_filter_example-checkpoint.ipynb  bloom_filter_experiments-checkpoint.ipynb
CLI/: bloom_filter.py  cli.py  cli_lsh.py
DSAN-6700 A2 EDA/: EDA for 30k docs.ipynb  EDA.ipynb
bloom_filter/: README.md  requirements.txt
bloom_filter/bloom_filter/: .gitignore  bloom_filter.py  pytest.ini
data/: five.tsv  hundred.tsv  hundredk.tsv  onek.tsv  tenk.tsv  thirty.tsv  thirtyk.tsv  threehundred.tsv  threek.tsv
docs/: bloom_filter_example.ipynb
docs/.ipynb_checkpoints/: bloom_filter_example-checkpoint.ipynb
docs/source/: conf.py  index.rst
eda/: EDA.ipynb
experiments/: LSH.py  cli.py
lsh/: lsh_improv.py  lsh_improv2.py
lsh/results/: 100-lsh.txt  10000-lsh.txt  300-lsh.txt  Improved_LSH_100-lsh.txt  Optimized_LSH_100-lsh.txt  Original_LSH_100-lsh.txt
results/: Optimized_LSH_100-lsh.txt  Original_LSH_100-lsh.txt  performance.txt
src/: LSH.py  MD5.py  lsh_cli.py  lsh_improv.py  lsh_improv2.py  md5_improv.py
src/bloom_filter/: README.md
src/bloom_filter/tests/: test_bloom_filter.py
src/results/: performance.txt
src/test/: test_LSH.py  test_lsh_overall.py
sweetgreen/: pyvenv.cfg
test/: MD5-test.py  md5-imp-test.py  test_lsh_overall.py
unit test/: unit test for Bloom Filter.ipynb
(+1 files in other folders)
